# paping

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: installer.rs  main.rs  pinger.rs  socks5.rs  updater.rs
