[package]
name = "paping"
version = "1.6.1"
edition = "2021"
description = "TCP port ping utility"
authors = ["Yutho <https://github.com/Yutho-tv>"]
repository = "https://github.com/Yutho-tv/paping"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
ctrlc = "3"
socket2 = "0.5"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
strip = true
lto = true
opt-level = "z"
